--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import "../styles/global.css";
+const pageTitle = "Página Inicial";
 ---
 
 <html lang="en">
@@ -8,10 +11,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>Astro</h1>
+    <Header />
+
+    <h1>{pageTitle}</h1>
     <h1>Meu Site Astro</h1>
+
+    <Footer />
   </body>
 </html>
