--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,9 @@
 
 ---
 
-<a href="/">Início</a>
-<a href="/about/">Sobre</a>
-<a href="/blog/">Blog</a>
+<div class="nav-links">
+  <a href="/">Início</a>
+  <a href="/about">Sobre</a>
+  <a href="/blog">Blog</a>
+  <a href="/tags/">Tags</a>
+</div>
