--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,6 @@
 ---
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
-import "../styles/global.css";
-
-const pageTitle = "Sobre Mim";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Sobre mim";
 
 const identify = {
   firstName: "Rafael",
@@ -15,7 +12,7 @@ const identify = {
 const skills = ["HTML", "CSS", "JavaScript", "Angular", "Astro", "Djogo.js"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy";
@@ -23,62 +20,38 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-    <style define:vars={{ skillColor, fontWeight, textCase }}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
+<BaseLayout pageTitle={pageTitle}>
+  <h2>... e meu novo site Astro!</h2>
 
-    <h1>{pageTitle}</h1>
-    <h2>... e meu novo site Astro!</h2>
-
-    <p>Aqui estão alguns fatos sobre mim:</p>
-    <ul>
-      <li>Meu nome é {identify.firstName}.</li>
-      <li>
-        Eu moro no {identify.country} e eu trabalho como um {
-          identify.occupation
-        }.
-      </li>
-      {
-        identify.hobbies.length >= 2 && (
-          <li>
-            Dois dos meus hobbies são: {identify.hobbies[0]} e{" "}
-            {identify.hobbies[1]}
-          </li>
-        )
-      }
-    </ul>
-    <p>Minhas habilidades são:</p>
-    <ul>
-      {skills.map((skill) => <li class="skill">{skill}</li>)}
-    </ul>
-
-    {happy && <p>Estou feliz em estar aprendendo Astro!</p>}
-
-    {finished && <p>Eu terminei esse tutorial!</p>}
-
+  <p>Aqui estão alguns fatos sobre mim:</p>
+  <ul>
+    <li>Meu nome é {identify.firstName}.</li>
+    <li>
+      Eu moro no {identify.country} e eu trabalho como um {identify.occupation}.
+    </li>
     {
-      goal === 3 ? (
-        <p>Minha meta é terminar em 3 dias.</p>
-      ) : (
-        <p>Minha meta não é em 3 dias.</p>
+      identify.hobbies.length >= 2 && (
+        <li>
+          Dois dos meus hobbies são: {identify.hobbies[0]} e{" "}
+          {identify.hobbies[1]}
+        </li>
       )
     }
-    <Footer />
-  </body>
-</html>
+  </ul>
+  <p>Minhas habilidades são:</p>
+  <ul>
+    {skills.map((skill) => <li class="skill">{skill}</li>)}
+  </ul>
+
+  {happy && <p>Estou feliz em estar aprendendo Astro!</p>}
+
+  {finished && <p>Eu terminei esse tutorial!</p>}
+
+  {
+    goal === 3 ? (
+      <p>Minha meta é terminar em 3 dias.</p>
+    ) : (
+      <p>Minha meta não é em 3 dias.</p>
+    )
+  }
+</BaseLayout>
