--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,27 +1,17 @@
 ---
-import Footer from "../components/Footer.astro";
-import Header from "../components/Header.astro";
-import "../styles/global.css";
-
-const pageTitle = "Meu Blog de Aprendizado sobre Astro";
+import BlogPost from "../components/BlogPost.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Blog";
+const allPosts = await Astro.glob("../pages/posts/*.md");
 ---
 
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
-
-    <h1>{pageTitle}</h1>
-    <p>Aqui é onde postarei sobre minha jornada aprendendo Astro.</p>
-    <ul>
-      <li><a href="/posts/post-1/">Postagem 1</a></li>
-      <li><a href="/posts/post-2/">Postagem 2</a></li>
-      <li><a href="/posts/post-3/">Postagem 3</a></li>
-    </ul>
-    <Footer />
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Aqui é onde postarei sobre minha jornada aprendendo Astro.</p>
+  <ul>
+    {
+      allPosts.map((post) => (
+        <BlogPost url={post.url} title={post.frontmatter.title} />
+      ))
+    }
+  </ul>
+</BaseLayout>
