--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,14 +3,15 @@ import Social from "./Social.astro";
 ---
 
 <style>
-  footer {
-    display: flex;
-    gap: 1rem;
-    margin-top: 2rem;
-  }
+   footer {
+       display: flex;
+       gap: 0.5rem;
+       margin-top: 2rem;
+   }
 </style>
 
 <footer>
-  <Social platform="linkedin" username="in/rafael-lima-c" />
-  <Social platform="github" username="RafaelLimaC" />
+    <Social platform="twitter" username="astrodotbuild" />
+    <Social platform="github" username="withastro" />
+    <Social platform="youtube" username="astrodotbuild" />
 </footer>
