--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,8 @@
 ---
-
 ---
-
 <div class="nav-links">
-  <a href="/">Início</a>
-  <a href="/about">Sobre</a>
-  <a href="/blog">Blog</a>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
 </div>
