--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,57 +1,75 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Sobre mim";
 
-const identify = {
-  firstName: "Rafael",
-  country: "Brasil",
-  occupation: "Desenvolvedor",
-  hobbies: ["estudar", "programar", "debugar"],
-};
-
-const skills = ["HTML", "CSS", "JavaScript", "Angular", "Astro", "Djogo.js"];
-
+const pageTitle = "About Me";
 const happy = true;
 const finished = true;
 const goal = 3;
+
+const identity = {
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Technical Writer",
+  hobbies: ["photography", "birdwatching", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 
 const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <h2>... e meu novo site Astro!</h2>
+<style define:vars={{ skillColor, fontWeight, textCase }}>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+  }
+</style>
 
-  <p>Aqui estão alguns fatos sobre mim:</p>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>... and my new Astro site!</h2>
+
+  <p>
+    I am working through Astro's introductory tutorial. This is the second page
+    on my website, and it's the first one I built myself!
+  </p>
+
+  <p>
+    This site will update as I complete more of the tutorial, so keep checking
+    back and see how my journey is going!
+  </p>
+
+  {happy && <p>I am happy to be learning Astro!</p>}
+
+  {finished && <p>I finished this tutorial!</p>}
+
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days.</p>
+    ) : (
+      <p>My goal is not 3 days.</p>
+    )
+  }
+
+  <p>Here are a few facts about me:</p>
   <ul>
-    <li>Meu nome é {identify.firstName}.</li>
-    <li>
-      Eu moro no {identify.country} e eu trabalho como um {identify.occupation}.
-    </li>
+    <li>My name is {identity.firstName}.</li>
+    <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
     {
-      identify.hobbies.length >= 2 && (
+      identity.hobbies.length >= 2 && (
         <li>
-          Dois dos meus hobbies são: {identify.hobbies[0]} e{" "}
-          {identify.hobbies[1]}
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
         </li>
       )
     }
   </ul>
-  <p>Minhas habilidades são:</p>
-  <ul>
+  <p>My skills are:</p><p></p><ul>
     {skills.map((skill) => <li class="skill">{skill}</li>)}
   </ul>
-
-  {happy && <p>Estou feliz em estar aprendendo Astro!</p>}
-
-  {finished && <p>Eu terminei esse tutorial!</p>}
-
-  {
-    goal === 3 ? (
-      <p>Minha meta é terminar em 3 dias.</p>
-    ) : (
-      <p>Minha meta não é em 3 dias.</p>
-    )
-  }
 </BaseLayout>
