--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,15 +20,14 @@ h1 {
   font-size: 2.5rem;
 }
 
-/* estilos da navegação */
+/* nav styles */
 
-/* estilos da navegação */
-.hamburguer {
+.hamburger {
   padding-right: 20px;
   cursor: pointer;
 }
 
-.hamburguer .line {
+.hamburger .line {
   display: block;
   width: 40px;
   height: 5px;
@@ -56,7 +55,7 @@ h1 {
 }
 
 .nav-links a:hover,
-a:focus {
+.nav-links a:focus {
   background-color: #ff9776;
 }
 
@@ -78,7 +77,7 @@ a:focus {
     padding: 15px 20px;
   }
 
-  .hamburguer {
+  .hamburger {
     display: none;
   }
 }
